# marvel-characters

./: .gitignore  .pre-commit-config.yaml  README.md  bundle_monitoring.yml  databricks.yml  demo.py  init_script.sh  project_config_marvel.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
demo_artifacts/: mlflow_experiment.json
notebooks/: lecture2.marvel_data_preprocessing.py  lecture3.mlflow_experiment_tracking.py  lecture4.train_register_basic_model.py  lecture6.ab_testing.py  lecture6.deploy_model_serving_endpoint.py  module1. marvel_data_preprocessing.py  module2.1. marvel_experiment_tracking.py  module2.2.marvel_train_register_basic_model.py  module2.3. marvel_train_register_custom_model.py  module4.1.marvel_deploy_model_serving_endpoint.py  module4.2.marvel_ab_testing.py  module6.1.marvel_create_monitoring_table.py  module6.2.create_alert.py
resources/: bundle_monitoring.yml  inference.app.yml
scripts/: 01.process_data.py  02.train_register_custom_model.py  02.train_register_fe_model.py  03.deploy_model.py  04.post_commit_status.py  05.refresh_monitor.py
src/: __init__.py
src/marvel_characters/: __init__.py  config.py  data_processor.py  monitoring.py  utils.py
src/marvel_characters/models/: __init__.py  basic_model.py  custom_model.py
src/marvel_characters/serving/: fe_model_serving.py  feature_serving.py  model_serving.py
tests/: conftest.py
tests/fixtures/: custom_model_fixture.py  datapreprocessor_fixture.py
tests/integration_tests/: test_mlflow_serve.py
tests/unit_tests/: spark_config.py  test_custom_model.py  test_dataprocessor.py
